--- a/src/index.njk
+++ b/src/index.njk
@@ -9,7 +9,7 @@ pagination:
 {% from "partials/card.njk" import card %}
 
 {% set title = "Posts" %}
-
+Hola
 {% block content %}
     <section class="post-feed">
         {% for post in posts %}
